	
	BEGIN_RCPP
	// user code
	END_RCPP
	
	o	Rcpp now depends on inline (>= 0.3.4)
	
	o	new R function "cppfunction" that invokes cfunction from inline with 
	focus on Rcpp usage (enforcing .Call, adding the Rcpp namespace, set up 
	exception forwarding). cppfunction uses BEGIN_RCPP and END_RCPP macros 
	to enclose the user code

    o	new class Rcpp::Formula to help building formulae in C++
	
    o	Rcpp.package.skeleton gains an argument "example_code" and can now be 
	used with an empty list, so that only the skeleton is generated. It has also
	been reworked to show how to use LinkingTo: Rcpp
	
    o   wrap now supports containers of the following types: long, long double,
	unsigned long, short and unsigned short which are silently converted
	to the most acceptable R type.
	
    o	Revert to not double-quote protecting the path on Windows as this
        breaks backticks expansion used n Makevars.win etc
        
    o	Exceptions classes have been moved out of Rcpp classes, e.g. Rcpp::RObject::not_a_matrix
    is now Rcpp::not_a_matrix

0.7.12  2010-04-16

    o   Undo shQuote() to protect Windows path names (which may contain
        spaces) as backticks use is still broken; use of $(shell ...) works

0.7.11	2010-03-26

    o	Vector<> gains a set of templated factory methods "create" which
	takes up to 20 arguments and can create named or unnamed vectors.
        This greatly facilitates creating objects that are returned to R. 

    o	Matrix now has a diag() method to create diagonal matrices, and
	a new constructor using a single int to create square matrices

    o	Vector now has a new fill() method to propagate a single value
	
    o   Named is no more a class but a templated function. Both interfaces
	Named(.,.) and Named(.)=. are preserved, and extended to work also on
	simple vectors (through Vector<>::create)
	
    o	Applied patch by Alistair Gee to make ColDatum more robust
    
    o	Fixed a bug in Vector that caused random behavior due to the lack of